--- a/exercises.Rmd
+++ b/exercises.Rmd
@@ -555,7 +555,7 @@ the middle plot takes up half of the total space:
 ```{r}
 p <- ggplot(mtcars) + 
   geom_point(aes(x = disp, y = mpg))
-p + p + p
+p + p + p + plot_layout(widths = c(1,2,1)) # OR + plot_layout(widths = unit(c(5,1,1), c('cm','null','null')))
 ```
 
 * * *
@@ -568,7 +568,7 @@ p1 <- ggplot(mtcars[mtcars$gear == 3,]) +
   geom_point(aes(x = disp, y = mpg))
 p2 <- ggplot(mtcars[mtcars$gear == 4,]) + 
   geom_point(aes(x = disp, y = mpg))
-p1 + p2
+p1 + p2 & scale_y_continuous(limits = c(10,40))
 ```
 
 * * *
@@ -591,6 +591,7 @@ AA#
 #BB
 C##
 '
+#c(patchwork::area(1,1,1,2), ) ???
 p1 + p2 + p3 + plot_layout(design = layout)
 ```
 
@@ -628,7 +629,8 @@ cylinders.
 
 ```{r}
 ggplot(mpg) + 
-  geom_point(aes(x = displ, y = hwy)) + 
+  geom_point(aes(x = displ, y = hwy, 
+                 group = seq_len(nrow(mpg)), colour = factor(cyl))) + 
   ggtitle("Cars with {closest_state} cylinders") + 
   transition_states(factor(cyl))
 ```
@@ -667,7 +669,10 @@ mpg2 <- tidyr::pivot_longer(mpg, c(cty,hwy))
 ggplot(mpg2) + 
   geom_point(aes(x = displ, y = value)) + 
   ggtitle("{if (closest_state == 'cty') 'Efficiency in city' else 'Efficiency on highway'}") + 
-  transition_states(name)
+  transition_states(name) +
+  ease_aes(y = 'cubic-in-out') #this make transition cooler (not linear speed)
+
+# check `animate` function for e.g. speed of animation
 ```
 
 ### Annotation
@@ -714,9 +719,10 @@ plot below where you only label 10 random points.
 mtcars2 <- mtcars
 mtcars2$label <- rownames(mtcars2)
 points_to_label <- sample(nrow(mtcars), 10)
+mtcars2$label[-points_to_label] <- ''
 ggplot(mtcars2, aes(x = disp, y = mpg)) + 
   geom_point() + 
-  geom_text_repel(aes(label = label))
+  geom_text_repel(aes(label = label), data = mtcars2[points_to_label, ])
 ```
 
 * * *
@@ -729,7 +735,7 @@ mtcars2$label <- ""
 mtcars2$label[1:10] <- rownames(mtcars2)[1:10]
 ggplot(mtcars2, aes(x = disp, y = mpg)) + 
   geom_point() + 
-  geom_text_repel(aes(label = label))
+  geom_text_repel(aes(label = label), direction = 'y')
 ```
 
 * * *
@@ -740,8 +746,20 @@ below:
 ```{r}
 ggplot(mtcars, aes(x = disp, y = mpg)) +
   geom_point() + 
-  geom_mark_ellipse(aes(filter = gear == 4,
-                        label = '4 gear cars'))
+  # geom_mark_ellipse(aes(filter = gear == 4,
+  #                       label = '4 gear cars')) 
+  geom_mark_ellipse(aes(fill = factor(gear), label = gear))
+  # geom_mark_ellipse(aes(group = factor(gear), label = gear), 
+  #                   fill = NA, colour = NA)
+  # geom_mark_rect(aes(filter = gear == 4,
+  #                       label = '4 gear cars'), expand = 0, radius = 0)
+  # geom_mark_circle(aes(filter = gear == 4,
+  #                       label = '4 gear cars')) +
+  # coord_cartesian(clip = 'off')
+  # geom_mark_hull(aes(filter = gear == 4,
+  #                       label = '4 gear cars'), concavity = 4)
+
+#check gghighligt to color specific point in specific condition https://cran.r-project.org/web/packages/gghighlight/vignettes/gghighlight.html
 ```
 
 ### Networks
@@ -779,7 +797,7 @@ graph below. See the [the website](https://ggraph.data-imaginist.com/reference/i
 for an overview of the different layouts.
 
 ```{r}
-ggraph(graph) + 
+ggraph(graph, layout = 'gem') + 
   geom_edge_link() + 
   geom_node_point(aes(colour = clique), size = 3)
 ```
@@ -794,6 +812,14 @@ highschool_gr <- as_tbl_graph(highschool)
 ggraph(highschool_gr) + 
   geom_edge_link() + 
   geom_node_point()
+  
+ggraph(highschool_gr) + 
+  geom_edge_parallel()
+  geom_node_point()
+  
+ggraph(highschool_gr) + 
+  geom_edge_fan()
+  geom_node_point()
 ```
 
 Faceting works in ggraph as it does in ggplot2, but you must choose to facet by
@@ -803,7 +829,8 @@ variable (using `facet_edges()`)
 ```{r}
 ggraph(highschool_gr) + 
   geom_edge_fan() + 
-  geom_node_point()
+  geom_node_point() +
+  facet_edges(~year)
 ```
 
 ### Looks
